test/type-error-6.ktn
def myAddVector ([a] [a] -> [a]): __add_vector

def bar ([a] [Char] -> Int):
  ->x; [x] myAddVector
